--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -61,7 +61,7 @@
             <div class="card mt-2 mx-auto p-4 bg-light">
                 <div class="card-body bg-light">
                     <div class="container">
-                        <form id="tracker-form" role="form">
+                        <form id="tracker-form" role="form", method="POST" action="/tracker">
                             <div class="controls">
                                 <div class="row">
                                     <div class="col-md-6">
@@ -88,7 +88,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <div class="form-group"> <label for="form_comment">Comments *</label> <textarea id="form_comment" name="message" class="form-control" placeholder="Note any comments here." rows="4"></textarea> </div>
+                                        <div class="form-group"> <label for="form_comment">Comments *</label> <textarea id="form_comment" name="comment" class="form-control" placeholder="Note any comments here." rows="4"></textarea> </div>
                                     </div>
                                     <div class="col-md-12"> <input type="submit" class="btn btn-success btn-send pt-2 btn-block " value="Record Readings"> </div>
                                 </div>
