--- a/templates/login.html
+++ b/templates/login.html
@@ -20,8 +20,9 @@ Login
         {{ wtf.form_field(form.username) }}
         {{ wtf.form_field(form.password) }}
         {{ wtf.form_field(form.remember) }} 
-        <a href="{{ url_for('register') }}" class="btn btn-primary">Register</a>
+        
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <a href="{{ url_for('register') }}" >Need an account? Sign Up here!!</a>
       </form>
 
     </div> <!-- /container -->
