--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Blood Glucose Tracker</title>
+    <title>Blood Sugar Tracker</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet"> 
