--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="{{ url_for('tracker') }}">Tracker<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Readings Log</a>
+            <a class="nav-link" href="{{ url_for('readingsLog') }}">Readings Log</a>
           </li> 
           <li class="nav-item">
             <a class="nav-link" href="#">Statistics</a>
