--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@ Register
     {{ wtf.form_field(form.username) }}
     {{ wtf.form_field(form.email) }}
     {{ wtf.form_field(form.password) }}
-    {{ wtf.form_field(form.diabetesType) }}
+    <!-- {{ wtf.form_field(form.diabetesType) }} -->
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
   </form>
 
