--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -64,8 +64,8 @@
                 <img class="card-img-top" src="{{url_for('.static', filename='images/writing.jpg')}}" alt="Card image" width="300px" height="200px">
                 <div class="card-body">
                     <h4 class="card-title">Enter Today's Readings</h4>
-                    <p class="card-text">Some example text.</p>
-                    <a href="#" class="btn btn-primary">Go To Tracker</a>
+                    <p class="card-text">Enter your blood sugar levels and daily activities here.</p>
+                    <a href="/tracker" class="btn btn-primary">Go To Tracker</a>
                 </div>
             </div>
           </div>
@@ -74,8 +74,8 @@
                 <img class="card-img-top" src="{{url_for('.static', filename='images/tracker.jpg')}}" alt="Card image" width="300px" height="200px">
                 <div class="card-body">
                     <h4 class="card-title">View History</h4>
-                    <p class="card-text">Some example text.</p>
-                    <a href="#" class="btn btn-primary">Go to Readings History</a>
+                    <p class="card-text">View your blood sugar history.</p>
+                    <a href="/log" class="btn btn-primary">Go to Readings History</a>
                 </div>
              </div> 
           </div>
@@ -84,7 +84,7 @@
                 <img class="card-img-top" src="{{url_for('.static', filename='images/graph.jpg')}}" alt="Card image" width="300px" height="200px">
                 <div class="card-body">
                     <h4 class="card-title">View Statistics</h4>
-                    <p class="card-text">Some example text.</p>
+                    <p class="card-text">Check graphs of your recorded sugar levels.</p>
                     <a href="#" class="btn btn-primary">Go to Statistics</a>
                 </div>
             </div>
