--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="https://i.dlpng.com/static/png/6654392_preview.png">
 
     <title>Blood Sugar Tracker</title>
 
@@ -23,6 +23,7 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
+          
           <h3 class="masthead-brand">Welcome!</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">Home</a>
@@ -34,6 +35,7 @@
       </header>
 
       <main role="main" class="inner cover">
+          <img src="https://i.dlpng.com/static/png/6654392_preview.png" width="200" height="200"></img>
         <h1 class="cover-heading">Blood Sugar Tracker</h1>
         <p class="lead">For persons with type 1 or type 2 diabetes, it is essential for them to monitor their blood glucose levels at all times. This can help them determine what makes their numbers go up or down, such as eating different foods, taking your medicine, or being physically active. Having an app helps them keep track of their glucose levels can be an extremely useful tool in helping them know their limits as to what they can do or eat at any given time. Thus, creating such an app will be the focus of our project.
 </p>
