--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="/images/icon.png">
 
     <title>Tracker</title>
 
@@ -19,7 +19,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="/dashboard"><img src="/images/icon.png" alt="blood sugar tracker" width="25" height="25"></img> Blood Sugar Tracker</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -51,18 +51,18 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-1">Welcome Back, {{name}}! </h1>
-          <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        </div>
+          </div>
       </div> 
 
         <div class="row ">
+        
         <div class="col-lg-7 mx-auto">
             <div class="card mt-2 mx-auto p-4 bg-light">
                 <div class="card-body bg-light">
                     <div class="container">
                         <form id="tracker-form" role="form", method="POST" action="/tracker">
                             <div class="controls">
+                                <h3>Blood Sugar Form:</h3>
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group"> <label for="form_bsLvl">Blood Sugar Level (mg/dl)</label> <input id="form_bsLvl" type="number" name="BloodSugar" class="form-control" placeholder="Please enter your Blood Sugar Level *" required="required" data-error="Blood Sugar is Required is required."> </div>
