--- a/templates/log.html
+++ b/templates/log.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="{{ url_for('readingsLog') }}">Readings Log<span class="sr-only">(current)</span></a>
           </li> 
           <li class="nav-item">
-            <a class="nav-link" href="#">Statistics</a>
+            <a class="nav-link" href="{{ url_for('stats') }}">Statistics</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
