--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
           <h3 class="masthead-brand">Welcome!</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/about">About</a>
             <a href="{{ url_for('login') }}" class="nav-link" href="#">Login</a> 
             <a href="{{ url_for('register') }}" class="nav-link" href="#">Register</a>
           </nav> 
