--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"> 
+  <meta id="my-data" data-name="{{logDates}}" data-other="{{logBS}}">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +20,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="{{ url_for('dashboard') }}"><img src="/images/icon.png" alt="blood sugar tracker" width="25" height="25"></img> Blood Sugar Tracker</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,14 +41,17 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log Out</button>
+            <a href="{{ url_for('logout') }}" class="btn btn-outline-success my-2 my-sm-0" role="button">Log Out</a>
         </form>
       </div>
     </nav>
 
-    <main role="main"> 
+    <main role="main">  
+        <div class="jumbotron"></div>
+            <div class="container">
+        </div> 
 
-      <canvas class="my-4" id="myChart" width="900" height="380"></canvas>
+        <canvas class="my-3" id="myChart" width="400" height="150"></canvas>
     </main>
 
     <!-- Bootstrap core JavaScript
@@ -60,16 +64,19 @@
   </body>
 </html> 
 
-  <!-- Graphs -->
+  <!-- Graphs --> 
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-    <script>
+    <script>  
+      var djangoData = $('#my-data').data();
+      console.log(djangoData.name.split(','))
       var ctx = document.getElementById("myChart");
       var myChart = new Chart(ctx, {
         type: 'line',
         data: {
-          labels: {{logDates}} ,
+          labels : djangoData.name.split(','), 
           datasets: [{
-            data: {{logBS}},
+            data: djangoData.other,
             lineTension: 0,
             backgroundColor: 'transparent',
             borderColor: '#007bff',
@@ -81,7 +88,7 @@
           scales: {
             yAxes: [{
               ticks: {
-                beginAtZero: false
+                beginAtZero: true,
               }
             }]
           },
