--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -19,8 +19,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="/dashboard"><img src="/images/icon.png" alt="blood sugar tracker" width="25" height="25"></img> Blood Sugar Tracker</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="{{ url_for('dashboard') }}"><img src="/images/icon.png" alt="blood sugar tracker" width="25" height="25"></img> Blood Sugar Tracker</a>      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -40,7 +39,7 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log Out</button>
+            <a href="{{ url_for('logout') }}" class="btn btn-outline-success my-2 my-sm-0" role="button">Log Out</a>
         </form>
       </div>
     </nav>
