--- a/templates/about.html
+++ b/templates/about.html
@@ -26,17 +26,21 @@
           
           <h3 class="masthead-brand">Welcome!</h3>
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">About</a>
-            <a href="{{ url_for('login') }}" class="nav-link" href="#">Login</a> 
-            <a href="{{ url_for('register') }}" class="nav-link" href="#">Register</a>
+            <a class="nav-link active" href="/">Home</a>
+            <a class="nav-link" href="/about">About</a>
+            <a href="{{ url_for('login') }}" class="nav-link" href="/login">Login</a> 
+            <a href="{{ url_for('register') }}" class="nav-link" href="/reigster">Register</a>
           </nav> 
         </div>
       </header>
 
       <main role="main" class="inner cover">
           <img src="/images/icon.png" width="200" height="200"></img>
-        
+        <h1 class="cover-heading">About us</h1>
+        <p class="lead">We are some dedicated Computer Science and IT students who wish to look out for the health of diabetics.</p>
+        <p class="lead">Keronn Gill</p>
+        <p class="lead">Dexter Singh</p>
+       
         </p>
       </main>
 
