--- a/templates/about.html
+++ b/templates/about.html
@@ -38,8 +38,8 @@
           <img src="/images/icon.png" width="200" height="200"></img>
         <h1 class="cover-heading">About us</h1>
         <p class="lead">We are some dedicated Computer Science and IT students who wish to look out for the health of diabetics.</p>
-        <p class="lead">Keronn Gill</p>
-        <p class="lead">Dexter Singh</p>
+        <p class="lead">Keronn Gill: 816007418 </p>
+        <p class="lead">Dexter Singh: 816009215</p>
        
         </p>
       </main>
