--- a/templates/about.html
+++ b/templates/about.html
@@ -27,7 +27,7 @@
           <h3 class="masthead-brand">Welcome!</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="/">Home</a>
-            <a class="nav-link" href="/about">About</a>
+            <a class="nav-link" href="{{ url_for('about') }}">About</a>
             <a href="{{ url_for('login') }}" class="nav-link" href="/login">Login</a> 
             <a href="{{ url_for('register') }}" class="nav-link" href="/reigster">Register</a>
           </nav> 
@@ -38,9 +38,11 @@
           <img src="/images/icon.png" width="200" height="200"></img>
         <h1 class="cover-heading">About us</h1>
         <p class="lead">We are some dedicated Computer Science and IT students who wish to look out for the health of diabetics.</p>
-        <p class="lead">Keronn Gill: 816007418 </p>
-        <p class="lead">Dexter Singh: 816009215</p>
-       
+        <p class="lead">Keronn Gill: 815007418 </p>  
+        <p class="lead">Dexter Singh: 816009215 </p> 
+        <p class="lead">Devaughn: 816017202</p>
+        <p class="lead">Alisha Ali: 816019167 </p>
+        <p class="lead">Jadel Rock: 817017891</p>
         </p>
       </main>
 
