--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
           
           <h3 class="masthead-brand">Welcome!</h3>
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="/">Home</a>
+            <a class="nav-link active" href="{{ url_for('index') }}">Home</a>
             <a class="nav-link" href="{{ url_for('about') }}">About</a>
             <a href="{{ url_for('login') }}" class="nav-link" href="/login">Login</a> 
             <a href="{{ url_for('register') }}" class="nav-link" href="/reigster">Register</a>
