--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <link href="{{ url_for('static', filename='/assets/js/vendor/popper.min.js') }}" rel="stylesheet"> 
+    <link href="{{ url_for('static', filename='../assets/js/vendor/popper.min.js') }}" rel="stylesheet"> 
     <link rel="stylesheet" href="{{url_for('.static', filename='home.css')}}">
 
     <!-- Custom styles for this template -->
