--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@ Login
         <h2 class="form-signin-heading">Please sign in</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.username) }}
-        {{ wtf.form_field(form.password) }}
+        {{ wtf.form_field(form.password,autocomplete="off") }}
         {{ wtf.form_field(form.remember) }} 
         
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
