--- a/templates/about.html
+++ b/templates/about.html
@@ -40,7 +40,7 @@
         <p class="lead">We are some dedicated Computer Science and IT students who wish to look out for the health of diabetics.</p>
         <p class="lead">Keronn Gill: 815007418 </p>  
         <p class="lead">Dexter Singh: 816009215 </p> 
-        <p class="lead">Devaughn: 816017202</p>
+        <p class="lead">Devaughn Martin: 816017202</p>
         <p class="lead">Alisha Ali: 816019167 </p>
         <p class="lead">Jadel Rock: 817017891</p>
         </p>
