--- a/templates/log.html
+++ b/templates/log.html
@@ -46,13 +46,13 @@
 
     <main role="main"> 
 
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron"></div>
-        <div class="container">
-          
+       <div class="jumbotron text-center">
+        <div class="container"> 
+            <h3 class="display-4">My Blood Sugar Logs </h3>
+            <p>Keeping track of your blood glucose levels is essential to prevent complications.</p>
         </div>
-      </div> 
-
+      </div>  
+      
       <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Select Time Period
