--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -48,9 +48,11 @@
 
         
       <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <div class="container">
-          </div>
+      <div class="jumbotron text-center">
+        <div class="container"> 
+            <h3 class="display-4">My Blood Sugar Tracker </h3>
+            <p>Keeping track of your blood glucose levels is essential to prevent complications.</p>
+        </div>
       </div> 
 
         <div class="row ">
@@ -73,7 +75,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group"> <label for="form_need">Activity *</label> <select id="form_activity" name="activity" class="form-control" required="required" data-error="Please specify activity.">
-                                                <option value="" selected disabled>--Select Your Issue--</option>
+                                                <option value="" selected disabled>--Select Your Activity--</option>
                                                 <option>Just Woke Up</option>
                                                 <option>Before Meal</option>
                                                 <option>1-2hrs After Meal</option> 
