--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/images/icon.png">
 
-    <title>Blood Sugar Tracker</title>
+    <title>About US</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet"> 
