--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="images/icon.png">
 
-    <title>Tracker</title>
+    <title>Dashboard</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet"> 
